# raytracer

./: .gitignore  Blob.cpp  Blob.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Image.cpp  Image.h  Point.cpp  Point.h  README.md  Scene.cpp  Scene.h  Textures.cpp  Textures.h  Vector.cpp  Vector.h  conanfile.txt  cubetrig.h  lights.cpp  lights.h  main.cpp  objects.cpp  objects.h
src/: CMakeLists.txt  main.cpp
src/engine/: Blob.cpp  Blob.h  CMakeLists.txt  Camera.cpp  Camera.h  Image.h  Scene.cpp  Scene.h  convert.h  cubetrig.h  ray.h
src/objects/: CMakeLists.txt
src/objects/lights/: CMakeLists.txt  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/objects/solids/: Box.cpp  Box.h  CMakeLists.txt  Cylinder.cpp  Cylinder.h  Intersection.h  MetaTriangle.cpp  MetaTriangle.h  Plane.cpp  Plane.h  Solid.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Wrapper.cpp  Wrapper.h
src/objects/textures/: CMakeLists.txt  TexMat.h  TexPixel.h  TransTex.cpp  TransTex.h  UniTex.cpp  UniTex.h
src/utils/: CMakeLists.txt  Color.h  Line.h  Matrix.h  Point.h  Vector.h
